--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.16",
     "redux": "^3.7.2"
